2007-02-19  Pedro J. Ruiz Lopez  <holzplatten@es.gnu.org>

	* Upgraded gnulib.
	* Upgraded gettext.

	* lib/regex_internal.h: fix warnings about redefined cpp macros.

2007-01-19  Jim Meyering  <jim@meyering.net>

	temporary fix simply to avoid the infloop.
	* libidu/scanners.c (get_token_lisp): Disable the code that
	treats '[]' as part of a kawa identifier.  It could call ungetc
	two or three times in a row.  One is the maximum.
	* testsuite/infloop-kawa-el: New file.  Test for the above.
	* testsuite/Makefile.am (TESTS): Add infloop-kawa-el.
	(TESTS_ENVIRONMENT): Prepend build directory to PATH so that
	invoking e.g., "mkid" runs the just-built version of the tool.

2006-11-25  Claudio Fontana  <claudio@gnu.org>

	* libidu/scanners.c (get_token_lisp): provide rough support for
	  character constants.

2006-10-19  Claudio Fontana  <claudio@gnu.org>

	* libidu/scanners.c (get_token_lisp): (tiny) fix bug in double
	  quoted string parsing (fix provided by Walter Sosa).

2006-08-22  Claudio Fontana  <claudio@gnu.org>

	* doc/idutils.texi: fix wrong example .emacs entry, where
	  a non existant 'gid' lisp is loaded instead of 'idutils'.

2006-08-05  Claudio Fontana  <claudio@gnu.org>

	version 4.2 released.

2006-07-22  Claudio Fontana  <claudio@gnu.org>

	* configure.ac: add header checks for terminal-related stuff.
	* configure.ac: add check for lstat, bumped to 4.2

	* libidu/idfile.c: replace include sys/stat.h with lstat.h.
	* libidu/scanners.c: likewise.
	* libidu/walker.c: likewise.
	* src/mkid.c: likewise.

	* libidu/walker.c: provide replacement function for lstat
	  in a somewhat convoluted way, using plain stat.

2006-07-22  Claudio Fontana  <claudio@gnu.org>

	* configure.ac: add check for sbrk

	* src/mkid.c (get_process_heap): new function.
	  Calls sbrk() if available, or NULL if unsupported.

	* src/mkid.c (report_statistics): (nochange)
	  the reported heap usage is 0+0 if sbrk is
	  not available.

2006-07-22  Claudio Fontana  <claudio@gnu.org>
