@@ -1,3 +1,13 @@
+2007-06-19  Tom Tromey  <tromey@redhat.com>
+
+	* lisp/idutils.el: Require thingatpt.
+	(gid-mode-font-lock-keywords): New variable.
+	(gid-use-search-in-buffer-name): New variable.
+	(gid-mode): New mode.
+	(gid): Use compilation-start, thing-at-point.
+	(word-around-point): Removed.
+	Details in <http://thread.gmane.org/gmane.comp.gnu.idutils.bugs/70>.
+
 2007-02-19  Pedro J. Ruiz Lopez  <holzplatten@es.gnu.org>
 
 	* Upgraded gnulib.
